# BoundPlanner

./: .gitignore  Dockerfile  README.md  boundplanner_example.py  boundplanner_with_mpc_example.py  docker-compose.yaml  flake.nix  package.xml  requirements.txt  setup.py
bound_planner/: package.xml  requirements.txt  setup.cfg  setup.py
bound_planner/BoundMPC/: BoundMPC.py  MPCNode.py  bound_mpc_functions.py  casadi_ocp_formulation.py  casadi_ocp_formulation_sf.py  mpc_utils_casadi.py
bound_planner/BoundPlanner/: BoundPlanner.py  ConvexSetFinder.py  __init__.py
bound_planner/ReferencePath/: ReferencePath.py  euler_spiral.py
bound_planner/RobotModel/: RobotModel.py  fk_pos.ca  fk_pos_col_0.ca  fk_pos_col_1.ca  fk_pos_col_2.ca  fk_pos_col_3.ca  fk_pos_col_4.ca  fk_pos_col_5.ca  gen3_arm.urdf  gen3_arm.urdf.xacro  hom_trans.ca  iiwa.urdf  iiwa14.urdf.xacro  jacobian.ca
bound_planner/RvizTools/: RvizTools.py  RvizToolsMPC.py  __init__.py
bound_planner/bound_planner/BoundMPC/: BoundMPC.py  bound_mpc_functions.py  casadi_ocp_formulation.py  mpc_utils_casadi.py
bound_planner/bound_planner/ConvexSetPlanner/: ConvexSetFinder.py  ConvexSetPlanner.py  __init__.py
bound_planner/bound_planner/Logger/: Logger.py
bound_planner/config/: config.rviz
bound_planner/launch/: experiment1.launch.py  experiment2.launch.py  rviz.launch.py
bound_planner/nodes/: bound_mpc_node.py  experiment1_runner.py  experiment2_runner.py
bound_planner/urdf/: main.xacro
bound_planner/utils/: __init__.py  optimization_functions.py  util_functions.py  visualization.py
(+16 files in other folders)
